.provarCaches/00D5f000005vwGkEAI/objects/rstk__sormadmdcst__c.object
<CustomObject>
    <description>sormadmdcst__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__sormadmdcst_sormadmd__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  TEXT(rstk__sormadmdcst_seq__c)</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_datetime__c</fullName>
        <inlineHelpText>This is the date and time of the RMA Line receipt</inlineHelpText>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_disp__c</fullName>
        <inlineHelpText>This is the disposition of the RMA Line once received</inlineHelpText>
        <label>Disposition</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_invdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Inventory Division to which the RMA line was received</inlineHelpText>
        <label>Inventory Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>RMA Demand Cost</relationshipLabel>
        <relationshipName>RMA_Demand_Cost</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_locid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Location ID to which the RMA Line was received</inlineHelpText>
        <label>Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>RMA Demand Cost</relationshipLabel>
        <relationshipName>RMA_Demand_Cost</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_locnum__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Obsolete (Location Number)</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>RMA Demand Cost (Location Number)</relationshipLabel>
        <relationshipName>RMA_Demand_Cost1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_locnumber__c</fullName>
        <inlineHelpText>This is the Location Number to which the RMA Line was received</inlineHelpText>
        <label>Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_loctype__c</fullName>
        <inlineHelpText>This is the Location Type for the location to which the RMA Line was received</inlineHelpText>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consigned</fullName>
                </value>
                <value>
                    <fullName>Non-nettable</fullName>
                </value>
                <value>
                    <fullName>On Hand</fullName>
                </value>
                <value>
                    <fullName>Outside Operation</fullName>
                </value>
                <value>
                    <fullName>Vendor Managed Inventory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_lotno__c</fullName>
        <inlineHelpText>This is the Lot Number received for the RMA line</inlineHelpText>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Project for the RMA Line to which the RMA was received</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>RMA Demand Cost</relationshipLabel>
        <relationshipName>RMA_Demand_Cost</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_reversed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that this transactions (Shipment or Receipt) has been reversed</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_seq__c</fullName>
        <inlineHelpText>This is the Sequence number</inlineHelpText>
        <label>Sequence</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Site to which the RMA Line was received</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>RMA Demand Cost</relationshipLabel>
        <relationshipName>RMA_Demand_Cost</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_sormadmd__c</fullName>
        <inlineHelpText>This is a reference to the RMA Demand record</inlineHelpText>
        <label>RMA Demand</label>
        <referenceTo>rstk__sormadmd__c</referenceTo>
        <relationshipLabel>RMA Demand Cost</relationshipLabel>
        <relationshipName>RMA_Demand_Cost</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_srlno__c</fullName>
        <inlineHelpText>This is the Serial Number received for the RMA Line</inlineHelpText>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_txnqty__c</fullName>
        <inlineHelpText>This is the quantity received</inlineHelpText>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_txntype__c</fullName>
        <inlineHelpText>Transaction type for the RMA Line receipt</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Receipt</fullName>
                </value>
                <value>
                    <fullName>Shipment</fullName>
                </value>
                <value>
                    <fullName>Receipt Reversal</fullName>
                </value>
                <value>
                    <fullName>Shipment Reversal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_ucstfrght__c</fullName>
        <inlineHelpText>This is the unit cost for Freight</inlineHelpText>
        <label>Unit Cost Freight</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_ucstlab__c</fullName>
        <inlineHelpText>This is the Standard Unit Labor Cost of the Product</inlineHelpText>
        <label>Unit Cost Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_ucstmtl__c</fullName>
        <inlineHelpText>This is the Standard Unit Material Cost of the Product</inlineHelpText>
        <label>Unit Cost Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_ucstohdfng__c</fullName>
        <inlineHelpText>This is the unit cost for Fringe OHD</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_ucstohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Overhead Fringe Cost of the Product</inlineHelpText>
        <label>Unit Cost OHD Fringe</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_ucstohdlab__c</fullName>
        <inlineHelpText>This is the Standard Unit Overhead Labor Cost of the Product</inlineHelpText>
        <label>Unit Cost OHD Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_ucstohdmach__c</fullName>
        <inlineHelpText>This is the Standard Unit Overhead Machine Cost of the Product</inlineHelpText>
        <label>Unit Cost OHD Machine</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_ucstohdmtl__c</fullName>
        <inlineHelpText>This is the Standard Unit Overhead Material Cost of the Product</inlineHelpText>
        <label>Unit Cost OHD Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_ucstothlnd__c</fullName>
        <inlineHelpText>This is the unit cost for Other Landed Costs</inlineHelpText>
        <label>Unit Cost Other Landed</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_ucstsublab__c</fullName>
        <inlineHelpText>This is the Standard Unit Subcontract Labor Cost of the Product</inlineHelpText>
        <label>Unit Cost Sub Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_ucstsubmtl__c</fullName>
        <inlineHelpText>This is the Standard Unit Subcontract Material Cost of the Product</inlineHelpText>
        <label>Unit Cost Sub Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmdcst_wbs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WBS</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipLabel>RMA Demand Cost</relationshipLabel>
        <relationshipName>RMA_Demand_Cost</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>RMA Demand Cost</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>rstk__formula_extid__c</columns>
        <columns>rstk__externalid__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_RMA_Demand_Cost</fullName>
        <columns>NAME</columns>
        <columns>rstk__sormadmdcst_invdiv__c</columns>
        <columns>rstk__sormadmdcst_sormadmd__c</columns>
        <columns>rstk__sormadmdcst_locid__c</columns>
        <columns>rstk__sormadmdcst_locnumber__c</columns>
        <columns>rstk__sormadmdcst_loctype__c</columns>
        <columns>rstk__sormadmdcst_project__c</columns>
        <columns>rstk__sormadmdcst_txnqty__c</columns>
        <columns>rstk__sormadmdcst_lotno__c</columns>
        <columns>rstk__sormadmdcst_srlno__c</columns>
        <columns>rstk__sormadmdcst_site__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__sormadmdcst_locnum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__sormadmdcst_sormadmd__c</field>
            <operation>contains</operation>
            <value>RMA30383</value>
        </filters>
        <label>RS RMA Demand Cost</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMA Demand Cost</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>